# cuttlestore

./: .gitignore  Cargo.toml  Readme.md
.github/workflows/: docs.yml  lint.yml  release.yml  test.yml
benches/: Readme.md  docker-compose.yml  get-concurrent.rs  get-sequential.rs  put-concurrent.rs  put-sequential.rs
docs/: index.html  style.css
docs/reports/: index.html
docs/reports/get 1000 times concurrently/: index.html
docs/reports/get 1000 times concurrently/couchdb/change/: estimates.json
docs/reports/get 1000 times concurrently/couchdb/new/: benchmark.json  estimates.json  sample.json  tukey.json
docs/reports/get 1000 times concurrently/couchdb/report/: index.html
docs/reports/get 1000 times concurrently/filesystem/: index.html
docs/reports/get 1000 times concurrently/filesystem/base/: benchmark.json  sample.json
docs/reports/get 1000 times concurrently/filesystem/change/: estimates.json
docs/reports/get 1000 times concurrently/filesystem/new/: estimates.json  tukey.json
docs/reports/get 1000 times concurrently/filesystem/report/: index.html
docs/reports/get 1000 times concurrently/in_memory/: index.html
docs/reports/get 1000 times concurrently/in_memory/base/: benchmark.json  tukey.json
docs/reports/get 1000 times concurrently/in_memory/change/: estimates.json
docs/reports/get 1000 times concurrently/in_memory/new/: estimates.json  sample.json
docs/reports/get 1000 times concurrently/in_memory/report/: index.html
docs/reports/get 1000 times concurrently/redis/: index.html
docs/reports/get 1000 times concurrently/redis/base/: estimates.json
docs/reports/get 1000 times concurrently/redis/change/: estimates.json
docs/reports/get 1000 times concurrently/redis/new/: benchmark.json  sample.json  tukey.json
docs/reports/get 1000 times concurrently/redis/report/: index.html
docs/reports/get 1000 times concurrently/report/: index.html
docs/reports/get 1000 times concurrently/sqlite/: index.html
docs/reports/get 1000 times concurrently/sqlite/base/: estimates.json  sample.json  tukey.json
docs/reports/get 1000 times concurrently/sqlite/change/: estimates.json
docs/reports/get 1000 times concurrently/sqlite/new/: benchmark.json
docs/reports/get 1000 times concurrently/sqlite/report/: index.html
docs/reports/get 1000 times concurrently/surrealdb/base/: benchmark.json  estimates.json  sample.json  tukey.json
docs/reports/get 1000 times concurrently/surrealdb/change/: estimates.json
docs/reports/get 1000 times concurrently/surrealdb/report/: index.html
docs/reports/get 1000 times from keyspace of 1000 entries concurrently, 50% h/: index.html
docs/reports/get 1000 times from keyspace of 1000 entries concurrently, 50% h/filesystem/: index.html
docs/reports/get 1000 times from keyspace of 1000 entries concurrently, 50% h/in_memory/: index.html
docs/reports/get 1000 times from keyspace of 1000 entries concurrently, 50% h/redis/: index.html
docs/reports/get 1000 times from keyspace of 1000 entries concurrently, 50% h/sqlite/: index.html
docs/reports/get 1000 times from keyspace of 1000 entries sequentially, 50% h/: index.html
docs/reports/get 1000 times from keyspace of 1000 entries sequentially, 50% h/filesystem/: index.html
docs/reports/get 1000 times from keyspace of 1000 entries sequentially, 50% h/in_memory/: index.html
docs/reports/get 1000 times from keyspace of 1000 entries sequentially, 50% h/redis/: index.html
docs/reports/get 1000 times from keyspace of 1000 entries sequentially, 50% h/sqlite/: index.html
docs/reports/get 1000 times sequentially/: index.html
docs/reports/get 1000 times sequentially/couchdb/base/: estimates.json  sample.json  tukey.json
docs/reports/get 1000 times sequentially/filesystem/: index.html
docs/reports/get 1000 times sequentially/in_memory/: index.html
docs/reports/get 1000 times sequentially/redis/: index.html
docs/reports/get 1000 times sequentially/report/: index.html
docs/reports/get 1000 times sequentially/sqlite/: index.html
docs/reports/put 1000 entries concurrently/: index.html
docs/reports/put 1000 entries concurrently/filesystem/: index.html
docs/reports/put 1000 entries concurrently/in_memory/: index.html
docs/reports/put 1000 entries concurrently/redis/: index.html
docs/reports/put 1000 entries concurrently/sqlite/: index.html
docs/reports/put 1000 entries sequentially/: index.html
docs/reports/put 1000 entries sequentially/filesystem/: index.html
docs/reports/put 1000 entries sequentially/in_memory/: index.html
docs/reports/put 1000 entries sequentially/redis/: index.html
docs/reports/put 1000 entries sequentially/sqlite/: index.html
docs/reports/put 1000 times concurrently/: index.html
docs/reports/put 1000 times concurrently/filesystem/: index.html
docs/reports/put 1000 times concurrently/in_memory/: index.html
docs/reports/put 1000 times concurrently/redis/: index.html
docs/reports/put 1000 times concurrently/report/: index.html
docs/reports/put 1000 times concurrently/sqlite/: index.html
docs/reports/put 1000 times sequentially/: index.html
docs/reports/put 1000 times sequentially/filesystem/: index.html
docs/reports/put 1000 times sequentially/in_memory/: index.html
docs/reports/put 1000 times sequentially/redis/: index.html
docs/reports/put 1000 times sequentially/report/: index.html
docs/reports/put 1000 times sequentially/sqlite/: index.html
docs/reports/report/: index.html
examples/: basic.rs  multiple-stores.rs  ttl.rs  using-builder.rs
src/: api.rs  backend_api.rs  builder.rs  lib.rs
src/backends/: mod.rs
src/backends/couchdb/: mod.rs
src/backends/dynamodb/: mod.rs
src/backends/filesystem/: mod.rs
src/backends/in_memory/: mod.rs
src/backends/redis/: mod.rs
src/backends/sqlite/: mod.rs
src/backends/surrealdb/: mod.rs
src/common/: cleanup.rs  error.rs  mod.rs  time.rs
tests/: cleanup.rs  couchdb.rs  dynamodb.rs  filesystem.rs  in-memory.rs  prefix.rs  redis-auth.rs  redis.rs  sqlite.rs  surrealdb.rs
tests/tests/: in-memory.rs  mod.rs
(+105 files in other folders)
