[package]
name = "cuttlestore"
description = "A generic API for interacting with key-value stores that can be selected at runtime."
version = "0.3.0"
edition = "2021"
authors = ["Kaan Barmore-Genç <kaan@bgenc.net>"]
license = "MIT"
readme = "Readme.md"
repository = "https://github.com/SeriousBug/cuttlestore"

[features]
default = [
  "backend-redis",
  "backend-in-memory",
  "backend-sqlite",
  "backend-dynamodb",
  "backend-couchdb",
  "logging-tracing",
]
backend-redis = ["redis", "bb8", "bb8-redis"]
backend-filesystem = []
backend-in-memory = ["dashmap"]
backend-sqlite = ["backend-sqlite-rustls"]
backend-dynamodb = ["aws-config", "aws-sdk-dynamodb", "aws-credential-types"]
backend-couchdb = ["backend-couchdb-rustls"]
logging-tracing = ["tracing"]
logging-log = ["log"]
# Backend customization

# For sqlite, we need to pick between native TLS and rustls.
backend-sqlite-core = []
backend-sqlite-native-tls = ["sqlx", "sqlite-native-tls", "backend-sqlite-core"]
backend-sqlite-rustls = ["sqlx", "sqlite-rustls", "backend-sqlite-core"]
sqlite-native-tls = ["sqlx/runtime-tokio-native-tls"]
sqlite-rustls = ["sqlx/runtime-tokio-rustls"]

# For couchdb, we similarly let the user pick between native TLS and rustls
# for the underlying reqwest HTTP client.
backend-couchdb-core = ["reqwest", "serde_json"]
backend-couchdb-native-tls = ["couchdb-native-tls", "backend-couchdb-core"]
backend-couchdb-rustls = ["couchdb-rustls", "backend-couchdb-core"]
couchdb-native-tls = ["reqwest/native-tls"]
couchdb-rustls = ["reqwest/rustls-tls"]

[dependencies]
# For async functions in trait definitions
async-trait = "0.1.89"
# For streams (async iterators)
futures = "0.3.32"
# Async runtime
tokio = { version = "1.52.3", features = ["full"] }
# Built-in for converting Tokio builtins to streams
tokio-stream = { version = "0.1.18", features = ["fs"] }
# Helper macros to generate streams
async-stream = "0.3.6"
# Serializing data. The API requires stored types to support Serde, but it's also used internally.
serde = { version = "1.0.228", features = ["derive"] }
# Binary serialization. Both used by the API to encode the payloads, and by some
# backends internally.
bincode = { version = "2.0.1", features = ["serde"] }
# Generating error types.
thiserror = "2.0.18"
# Used to parse connection strings.
lazy-regex = "3.6.0"
# Logging errors
log = { version = "0.4", optional = true }
tracing = { version = "0.1", optional = true }

#
# == Backend specific
#

# Concurrent in-memory key-value storage, for in-memory
dashmap = { version = "6.1", optional = true }

# Redis
redis = { version = "1.2", optional = true, features = [
  "tokio-comp",
  "tokio-native-tls-comp",
] }
# Connection pool for redis
bb8 = { version = "0.9", optional = true }
bb8-redis = { version = "0.26", optional = true }

# Sqlite
sqlx = { version = "0.8", default-features = false, features = [
  "sqlite",
], optional = true }

# DynamoDB
aws-config = { version = "1.8", optional = true, features = [
  "behavior-version-latest",
] }
aws-sdk-dynamodb = { version = "1", optional = true, features = [
  "behavior-version-latest",
] }
aws-credential-types = { version = "1", optional = true, features = [
  "hardcoded-credentials",
] }

# CouchDB
reqwest = { version = "0.12", default-features = false, features = [
  "json",
], optional = true }
serde_json = { version = "1.0", optional = true }


[dev-dependencies]
# For benchmarks
criterion = { version = "0.8", features = ["async_tokio"] }
# Generates random data to put into the store during benchmarks
nanoid = "0.5"
lipsum = "0.9"
rand = "0.10"
# For easily spawning async stuff in tests
tokio-test = "0.4"

[[bench]]
name = "put-sequential"
harness = false

[[bench]]
name = "put-concurrent"
harness = false

[[bench]]
name = "get-concurrent"
harness = false

[[bench]]
name = "get-sequential"
harness = false
